# Copyright (c) 2026, NSD Core Architecture Team and contributors
# For license information, please see license.txt

from frappe.model.document import Document


class ContractApproval(Document):
	pass
