erDiagram
  COMPANY ||--o{ CONTRACT : owns
  LEGAL_ENTITY ||--o{ CONTRACT : executes
  CONTRACT_TYPE ||--o{ CONTRACT : classifies
  CONTRACT ||--o{ CONTRACT_VERSION : has
  CONTRACT ||--o{ CONTRACT_PARTY : includes
  CONTRACT_PARTY ||--o{ PARTY_ROLE : plays
  CONTRACT ||--o{ CONTRACT_RELATIONSHIP : relates
  CONTRACT ||--o{ CONTRACT_CLAUSE : contains
  CLAUSE ||--o{ CLAUSE_VERSION : versions
  CONTRACT ||--o{ CONTRACT_REVIEW : receives
  CONTRACT_REVIEW ||--o{ REVIEW_ASSIGNMENT : assigns
  CONTRACT ||--o{ NEGOTIATION_ROUND : has
  NEGOTIATION_ROUND ||--o{ NEGOTIATION_ISSUE : tracks
  CONTRACT ||--o{ CONTRACT_APPROVAL : requests
  CONTRACT_APPROVAL ||--o{ CONTRACT_APPROVAL_STEP : contains
  CONTRACT ||--o{ SIGNATURE_REQUEST : requires
  SIGNATURE_REQUEST ||--o{ SIGNATURE_EVENT : records
  CONTRACT ||--o{ CONTRACT_OBLIGATION : creates
  CONTRACT_OBLIGATION ||--o{ OBLIGATION_EVIDENCE : supports
  CONTRACT ||--o{ CONTRACT_RENEWAL : renews
  CONTRACT_RENEWAL ||--o{ RENEWAL_NOTICE : schedules
  CONTRACT ||--o{ CONTRACT_AMENDMENT : changes
  CONTRACT ||--o{ CONTRACT_TERMINATION : ends
  CONTRACT ||--o{ CONTRACT_PERFORMANCE_METRIC : measures
  CONTRACT_PERFORMANCE_METRIC ||--o{ CONTRACT_PERFORMANCE_PERIOD : records
  CONTRACT ||--o{ CONTRACT_DISPUTE : has
  CONTRACT ||--o{ AI_REVIEW : analyzed
  AI_REVIEW ||--o{ AI_EXTRACTED_FIELD : extracts
  AI_REVIEW ||--o{ AI_EXTRACTED_CLAUSE : extracts
  AI_REVIEW ||--o{ AI_RISK_FINDING : finds
